fix overflow and mobile view

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ body {
     height: 500px;
     width: 80vw;
     max-width: 800px;
+    overflow: auto;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
     background-color: rgba(255, 255, 255, .9);
@@ -135,4 +136,17 @@ body {
 
 .popup-body em {
     font-size: 18px;
+}
+
+/* For mobile phones: */
+@media only screen and (max-width: 768px) {
+    .popup-title {
+        font-size: 20px;
+    }
+    .popup-body {
+        font-size: 18px;
+    }
+    .popup-body em {
+        font-size: 16px;
+    }
 }
